--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,10 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
+.qr-closed {
+    filter: blur(8px);
+    opacity: 0.4;
+    pointer-events: none;
+    transition: all 0.3s ease;
+  }  
+  
